# Stock_Info_Easy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vignette.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/stock_info_easy/: __init__.py  stock_info_easy.py
tests/: test_stock_info_easy.py
