[tool.poetry]
name = "stock_info_easy"
version = "1.2.8"
description = "This package provides user-friendly functions to easily navigate stock information of the companies of their interests. The output results include visualization of closing prices and daily returns, stock prediction for the next twenty days, as well as the company information with sectors and PE ratios."
authors = ["Shauna Han"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shaunahan/Stock_Info_Easy"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
